--- a/CSS/main.css
+++ b/CSS/main.css
@@ -415,6 +415,7 @@ context-container-1 {
         transform: translateY(5px);
         transition: all 0.6s;
         color: #94934d;
+        background: none;
 
     }
 
@@ -437,6 +438,7 @@ context-container-1 {
         transform: translateY(5px);
         transition: all 0.6s;
     }
+
 }
 
 .fa {
