--- a/CSS/main.css
+++ b/CSS/main.css
@@ -52,7 +52,7 @@ h4 {
 
 .project-container h1 {
     font-size: 4em;
-    margin-left: .5em;
+    margin-left: 90px;
 
     @media only screen and (min-width: 600px) {}
 }
@@ -421,8 +421,7 @@ context-container-1 {
 }
 
 .card-content-container:hover {
-
-    border: .5px solid hsl(151, 76%, 82%);
+    background: hsla(151, 76%, 82%, 0.182);
     border-radius: 5%;
     padding: 5%;
     margin: auto;
@@ -430,14 +429,14 @@ context-container-1 {
     & .content-grid-text h2 {
         transform: translateY(-10px);
         transition: all 0.6s;
-        color: #94934d;
+        color: #dad88c;
 
     }
 
     & .content-grid-text a {
         transform: translateY(5px);
         transition: all 0.6s;
-        color: #94934d;
+        color: #dad88c;
         background: none;
 
     }
@@ -449,7 +448,6 @@ context-container-1 {
 }
 
 .card-content-container:hover {
-    border: 1px solid hsl(149, 68%, 76%);
 
     & .content-grid-text h2 {
         transform: translateY(10px);
@@ -535,7 +533,7 @@ context-container-1 {
 }
 
 .container {
-    height: 100vh;
+    height: 70vh;
     max-width: 100%;
     margin: 0 auto;
     justify-content: space-around;
@@ -646,12 +644,12 @@ context-container-1 {
 
 .container_content_inner h1 {
     margin: 0;
-    font-size: 2em;
+    font-size: 3em;
     color: hsl(65, 85%, 74%);
     margin-bottom: 20px;
     transform: translateY(200px);
     animation: slideUp .8s ease forwards .6s;
-    @media only screen and (min-width: 1000px) {
+    @media only screen and (min-width: 600px) {
     font-size: 6em;
     }
 
