--- a/CSS/main.css
+++ b/CSS/main.css
@@ -52,9 +52,11 @@ h4 {
 
 .project-container h1 {
     font-size: 4em;
-    margin-left: 90px;
+    margin-left: 24px;
 
-    @media only screen and (min-width: 600px) {}
+    @media only screen and (min-width: 600px) {
+        margin-left: 90px;
+    }
 }
 
 a,
@@ -533,7 +535,7 @@ context-container-1 {
 }
 
 .container {
-    height: 70vh;
+    height: 120vh;
     max-width: 100%;
     margin: 0 auto;
     justify-content: space-around;
@@ -544,6 +546,7 @@ context-container-1 {
 
     @media only screen and (min-width: 600px) {
         display: flex;
+        height: 70vh;
         ;
 
     }
