--- a/CSS/main.css
+++ b/CSS/main.css
@@ -66,7 +66,7 @@ a:focus,
 a:active,
 a:visited {
     color: var(--link);
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 a:hover {
@@ -81,7 +81,9 @@ font-size: 2em;
 color: var(--header);
 }
 
-
+.small-text{
+    font-size: .8em; 
+}
 .medium-text {
     font-size: 1.5em;
 
@@ -97,6 +99,7 @@ color: var(--header);
         font-size: 3em;
     }
 }
+
 .padding-none{
     padding: 0 15%; 
     margin: 0 auto;
